fix(kit): incorrect alignment of icons in multiselect
Fixes a bug in `multiselect` when the above elements have a `data-size` attribute.

Fixes #1636

--- a/projects/kit/components/multi-select/multi-select.style.less
+++ b/projects/kit/components/multi-select/multi-select.style.less
@@ -29,15 +29,15 @@
         opacity: var(--tui-disabled-opacity);
     }
 
-    :host-context([data-size='s']) & {
+    :host[data-size='s'] & {
         height: var(--tui-height-s);
     }
 
-    :host-context([data-size='m']) & {
+    :host[data-size='m'] & {
         height: var(--tui-height-m);
     }
 
-    :host-context([data-size='l']) & {
+    :host[data-size='l'] & {
         height: var(--tui-height-l);
     }
 }
